Sun Nov 30 16:48:47 2003                        Michael Jennings (mej)

Resurrecting old docs so I can update them.
----------------------------------------------------------------------
Tue Dec  2 17:18:35 2003                        Michael Jennings (mej)

Tasty new FAQ stuff.
----------------------------------------------------------------------
Thu Dec  4 17:23:37 2003                        Michael Jennings (mej)

Rounding out the FAQ (so far).  Plus a minor fix to rebuild packages
using mzbuild.
----------------------------------------------------------------------
Thu Dec  4 18:04:57 2003                        Michael Jennings (mej)

Updated debian/ build goop.
----------------------------------------------------------------------
Sat Dec 13 13:01:48 2003                        Michael Jennings (mej)

Fix dependencies.
----------------------------------------------------------------------
Tue Dec 30 19:31:00 2003                        Michael Jennings (mej)

Support building packages inside a chroot jail.
----------------------------------------------------------------------
Wed Dec 31 08:21:47 2003                        Michael Jennings (mej)

Minor fixes.
----------------------------------------------------------------------
Wed Dec 31 16:08:26 2003                        Michael Jennings (mej)

Working on hint and chroot-resync support.
----------------------------------------------------------------------
Sat Jan  3 19:45:10 2004                        Michael Jennings (mej)

Fix rebuild of SRPM's.
----------------------------------------------------------------------
Mon Jan  5 14:33:06 2004                        Michael Jennings (mej)

Added support for instroot init/reset/copy.
----------------------------------------------------------------------
Mon Jan  5 16:16:49 2004                        Michael Jennings (mej)

Update help screens.
----------------------------------------------------------------------